fix(styles): change white-space property to nowrap for better text overflow handling

--- a/projects/core/components/textfield/textfield-multi/textfield-item.style.less
+++ b/projects/core/components/textfield/textfield-multi/textfield-item.style.less
@@ -1,7 +1,7 @@
 :host {
     max-inline-size: 100%;
     flex-shrink: 0;
-    white-space: pre-wrap;
+    white-space: nowrap;
     text-overflow: ellipsis;
 
     &._string {
